--- a/employer/css/navs.css
+++ b/employer/css/navs.css
@@ -45,7 +45,7 @@ body {
   display: flex;
   min-height: 100vh;
   height: auto;
-  overflow: hidden;
+  /* overflow: hidden; */
   background-color: #f5f5f5;
 }
 .navbar {
@@ -57,7 +57,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 100;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   width: 100%;
 
